--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,5 @@
 <div class="footer">
-    <div class="follow-me">
-        <h3>Follow Me</h3>
-    </div>
-    <div class="follow-icons">
-        <a href="http://twitter.com/nishnha" target="_blank">
-            <i class="fa fa-twitter fa-3x fa-inverse"></i>
-        </a>
-        <a href="http://www.twitch.tv/nishnha" target="_blank">
-            <i class="fa fa-twitch fa-3x fa-inverse"></i>
-        </a>
-
-    </div>
+    <a href="http://twitter.com/nishnha" target="_blank" title="Follow me on Twitter">
+        <i class="fa fa-twitter fa-2x"></i>
+    </a>
 </div>
