--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,36 +2,24 @@
 
   <body>
 
-    <!-- CSS -->
-    <link href="/css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <div class="navbar">
-        <a class="logo" href="/">
-            <img alt="logo" src="/img/logo.png" width="160" height="50">
+    <nav role="navigation">
+        <a href="/" class="logo">
+            <img src="/img/logo.png" width="200" height="62.5">
         </a>
-
-        <ul class="nav-buttons">
-            <li>
-                <a href="/archive/index.html" {% if page.url contains "/archive/" %} class="active" {% endif %} title="A list of all my posts">Archive</a>
-            </li>
-            <li>
-                <a href="/projects/index.html" {% if page.url contains "/projects/" %} class="active" {% endif %} title="Some of my current projects">Projects</a>
-            </li>
-            <li>
-                <a href="https://www.flickr.com/photos/131853866@N06/" target="_blank" title="My best works">Photography</a>
-            </li>
-            <li>
-                <a href="/about/index.html" title="About me">About Me</a>
-            </li>
-        </ul>
-    </div>
+        <div class="nav-buttons">
+            <li><a href="/archive" {% if page.url contains "/archive/" %} class="active" {% endif %} title="A list of all my posts">Archive</a>
+                
+            <li><a href="/projects" {% if page.url contains "/projects/" %} class="active" {% endif %} title="Some of my current projects">Projects</a>
+                
+            <li><a href="https://www.flickr.com/photos/131853866@N06/" target="_blank" title="My best works">Photography</a>
+                
+            <li><a href="/about" title="About me">About Me</a>
+        </div>
+    </nav>
         
         {{content}}
+
+    {% include footer.html %}
 
   </body>
 
