--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,12 @@
 layout: default
 ---
 
-<div class="post">
+<div class="page">
     <div class="content">
         <div class="title"><h1>{{ page.title }}</h1></div>
+        <div class="date"><p>{{ page.date | date: "%B %-d, %Y" }}</p></div>
         <br>
-        <br>
-        <div class="date"><p>{{ post.date | date: "%Y-%m" }}</p></div>
-        <br>
-        <br>
-        <div class="body">{{ content }}</div>
+        <div class="article">{{ content }}</div>
     </div>
+    {% include disqus.html %}
 </div>
-                
-{% include footer.html %}
-{% include disqus.html %}
