fixed mobile view...mostly
added favicon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,13 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     
     <!-- CSS -->
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
+    
+    <!-- small devices -->
+    <link href="/css/phone.css" rel="stylesheet" media="(max-width: 768px)">
+    
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
