--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,9 @@ layout: default
 <div class="page">
     <div class="content">
         <div class="title"><h1>{{ page.title }}</h1></div>
-        <br>
         <div class="date"><p>{{ page.date | date: "%B %-d, %Y" }}</p></div>
-        <br>
         <div class="article">{{ content }}</div>
+        <p><a href="#top" class="top">Back to Top</a></p>
     </div>
     {% include disqus.html %}
 </div>
