--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico">
+    
+    <!-- 301 for /posts/xyz/index.html -->
+    <link rel="canonical" href="{{ page.url }}" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -53,8 +56,4 @@
     </div>
 </body>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 </html>
