--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,9 @@ permalink: /posts/:title
     <div class="content">
         <div class="title"><h1>{{ page.title }}</h1></div>
         <div class="date"><p>{{ page.date | date: "%B %-d, %Y" }}</p></div>
-        <div class="article">{{ content }}</div>
-        <p><a href="#top" class="top">Back to Top</a></p>
-        {% include disqus.html %}
+        <div class="article">{{ content }}
+        	<p class="backToTop"><a href="#top" class="top">Back to Top</a></p>
+		</div>
+		{% include disqus.html %}
     </div>
 </div>
