html style changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <div id="footer">
-    <a href="http://twitter.com/nishnha" target="_blank" title="Follow me on Twitter"><i class="fa fa-twitter fa-2x"></i></a>
+    <a href="http://twitter.com/nishnha" target="_blank" title="Follow me on Twitter">
+		<i class="fa fa-twitter fa-2x"></i>
+	</a>
 </div>
