--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,10 +4,10 @@
 		<i class="fa fa-lg fa-bars"></i>
 	</label>
 
-	<a class="logo" href="/">nishnha.me</a>
+	<a class="logo" href="/">nishnha</a>
 	<ul class="nav-links">
 		<li><a href="/archive" {% if page.url contains "archive" %} class="active" {% endif %} title="A list of all my posts">Archive</a></li>
-		<li><a href="/projects" {% if page.url contains "projects" %} class="active" {% endif %} title="Some of my current projects">Projects</a></li>
+		<li><a href="http://github.com/Nishnha" target="_blank" title="My Github profile">Github</a></li>
 		<li><a href="https://www.instagram.com/nishnha/" target="_blank" title="Photograpy">Photography</a></li>
 		<li><a href="/about" {% if page.url contains "about" %} class="active" {% endif %} title="About me">About Me</a></li>
 	</ul>
