--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,33 +3,27 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
     <!-- Gives the page title as {title} (medium dash) Nishnha if title, otherwise as Nishnha -->
     <title>{% if page.title%}{{ page.title }} &mdash; {% endif %}Nishnha</title>
-
     <!-- loads Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/690e26edf4.js">
-
     <!-- fonts -->
     <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
-
 	<!-- sets the css for different viewports -->
     <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
     <link href="/css/phone.css" rel="stylesheet" media="(max-width: 768px)">
-
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
-<body id="top">
-    {% include navbar.html %}
-    {{content}}
-	{% include footer.html %}
+<body>
+    <div class="wrapper">
+        {% include navbar.html %}
+        {{content}}
+        {% include footer.html %}
+    </div>
 </body>
 
 </html>
