--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -7,8 +7,7 @@
     <title>{% if page.title%}{{ page.title }} &mdash; {% endif %}Nishnha</title>
 
 	<link href="/css/main.css" rel="stylesheet"/>
-	<link href="/css/resume.css" rel="stylesheet"/>
-    <link href="/css/resume.css" rel="stylesheet" media="print"/>
+	<link href="/css/resume.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
