removed disqus, replaced with github issues as comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,5 +9,7 @@ permalink: /articles/:title
     <div class="article">{{ content }}
         <p class="backToTop"><a href="#top" class="top">Back to Top</a></p>
     </div>
-    {% include disqus.html %}
+    {% if page.comment_id %}
+    	{% include gh_comments.html %}
+    {% endif %}
 </div>
