--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,6 +9,6 @@
 		<li><a href="/archive" {% if page.url contains "archive" %} class="active" {% endif %} title="A list of all my posts">Archive</a></li>
 		<li><a href="http://github.com/Nishnha" target="_blank" title="My Github profile">Github</a></li>
 		<li><a href="https://www.instagram.com/nishnha/" target="_blank" title="Photograpy">Photography</a></li>
-		<li><a href="/about" {% if page.url contains "about" %} class="active" {% endif %} title="About me">About Me</a></li>
+		<li><a href="/about" {% if page.url contains "about" %} class="active" {% endif %} title="Resume">About Me</a></li>
 	</ul>
 </nav>
