--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,9 @@
     <meta charset="utf-8">
     <!-- Gives the page title as {title} (medium dash) Nishnha if title, otherwise as Nishnha -->
     <title>{% if page.title%}{{ page.title }} &mdash; {% endif %}Nishnha</title>
-    <!-- loads Fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/690e26edf4.js">
     <!-- fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Acme' rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Adamina" rel="stylesheet"> 
+    <link href='//fonts.googleapis.com/css?family=Acme' rel="stylesheet">
 	<!-- sets the css for different viewports -->
     <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
     <link href="/css/phone.css" rel="stylesheet" media="(max-width: 768px)">
