--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,6 @@
     <link href='//fonts.googleapis.com/css?family=Acme' rel="stylesheet">
 	<!-- sets the css for different viewports -->
     <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
-    <link href="/css/phone.css" rel="stylesheet" media="(max-width: 768px)">
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico">
 </head>
@@ -19,7 +18,7 @@
     <div class="wrapper">
         {% include navbar.html %}
         {{content}}
-        {% include footer.html %}
+        <!-- {% include footer.html %} -->
     </div>
 </body>
 
