--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,13 @@ layout: default
 permalink: /articles/:title
 ---
 
-<div class="content">
+<article>
     <div class="title"><h1>{{ page.title }}</h1></div>
     <div class="date"><p>{{ page.date | date: "%B %-d, %Y" }}</p></div>
-    <div class="article">{{ content }}
-        <p class="backToTop"><a href="#top" class="top">Back to Top</a></p>
-    </div>
-    {% if page.comment_id %}
-    	{% include gh_comments.html %}
-    {% endif %}
-</div>
+	<div class="body">{{ content }}</div>
+	<a href="#top" class="top">Back to Top</a>
+</article>
+
+{% if page.comment_id %}
+	{% include gh_comments.html %}
+{% endif %}
