--- a/_sass/_paginator.scss
+++ b/_sass/_paginator.scss
@@ -1,33 +1,44 @@
-.paginator-post {
-  display: inline-block;
+.home-paginate {
+  column-count: 2;
+  column-gap: 0;
+
+  a {
+    text-decoration: none;
+  }
+
+}
+
+.page {
+  width: $page-width;
   color: $text-color;
-  width: $page-width / 2 - 4em;
-  height: auto;
-  padding: 2em 2em;
+  font: $text-font;
+}
 
-  .title {
-    display: block;
-    font-family: "Poly", serif;
-    font-size: 28px;
-    font-weight: bold;
-    margin-top: 0;
-  }
+.more {
+  font-size: 20px;
+  display: block;
+  text-align: center;
+  padding-bottom: 1em;
+  text-decoration: none;
+}
 
-  .date {
-    color: #8b8b8b;
-    display: inline;
-    font-size: 24px;
-  }
+.title {
+  display: block;
+  font-family: "Poly", serif;
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: 0;
+}
 
-  .description {
-    display: inline;
-    font-size: 24px;
-  }
+.date {
+  color: #8b8b8b;
+  display: inline;
+  font-size: 24px;
+}
 
-  &:hover, &:first-child {
-    background: $hover-bg;
-    color: white;
-  }
+.description {
+  display: inline;
+  font-size: 24px;
 }
 
 .paginator-image {
@@ -38,13 +49,15 @@
 
   .image {
     vertical-align: top;
+    width: $page-width / 2;
   }
 
   .title {
-    margin: 0;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%; 
     position: absolute;
-    top: 85%;
-    left: 20%;
+    bottom: 10px;
     font: bold 32px "Poly", serif;
     z-index: 100;
   }
