--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif');
+
 $text-color: #444444;
 $link-color: grey;
-$page-width: 55em;
+$page-width: 47em;
 $hover-bg: #3A3A3A;
 $bg-color: white;
-$text-font: "Adamina", Georgia, Cambria, "Times New Roman", Times, serif;
+$date-color: #8b8b8b;
+$text-font: "Noto Serif", Georgia, Cambria, "Times New Roman", Times, serif;
