--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,11 @@ permalink: /articles/:title
 ---
 
 <article>
-    <img class="cover" alt="image" src="{{ page.image }}" />
     <div class="title"><h1>{{ page.title }}</h1></div>
     <div class="date"><p>{{ page.date | date: "%B %-d, %Y" }}</p></div>
+    {% if page.cover %}
+		<div class="cover" style="background-image: url({{ page.cover }});"></div>
+	{% endif %}
 	<div class="body">{{ content }}</div>
 	<a href="#top" class="top">Back to Top</a>
 </article>
