--- a/_sass/_paginator.scss
+++ b/_sass/_paginator.scss
@@ -17,6 +17,8 @@
 .more {
   font-size: 20px;
   display: block;
+  width: 100%;
+  margin-top: 50px;
   text-align: center;
   padding-bottom: 1em;
   text-decoration: none;
