--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -9,7 +9,15 @@ body {
 }
 
 img {
-  width: 100%;
+  width: auto;
+  margin: 0 auto;
+  display: block;
+}
+
+.caption {
+  text-align: center; 
+  font-style: italic; 
+  margin-top: -1rem;
 }
 
 a {
@@ -19,6 +27,10 @@ a {
 p {
   text-align: justify;
   text-justify: inter-word;
+  &:has(> img) {
+    margin: 0 auto !important;
+    font-style: italic !important;
+  }
 }
 
 pre {
@@ -47,7 +59,7 @@ blockquote {
   height: 500px;
   width: 100%; 
   padding: 0 50rem; 
-  margin: 50px -50rem;
+  margin: 50px -50rem 0 -50rem;
 }
 
 .title {
@@ -55,7 +67,6 @@ blockquote {
   font-family: "Noto Sans";
   font-weight: 700;
   text-transform: uppercase;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .date {
