--- a/_sass/_paginator.scss
+++ b/_sass/_paginator.scss
@@ -57,8 +57,9 @@
   .title {
     text-align: center;
     margin: 0 auto;
-    width: 100%; 
+    width: 95%; 
     position: absolute;
+    text-shadow: 2px 2px 2px black;
     bottom: 10px;
     font: bold 32px "Poly", serif;
     z-index: 100;
