--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif|Open+Sans');
 
 $text-color: #444444;
 $link-color: grey;
@@ -6,4 +6,4 @@ $page-width: 47em;
 $hover-bg: #3A3A3A;
 $bg-color: white;
 $date-color: #8b8b8b;
-$text-font: "Noto Serif", Georgia, Cambria, "Times New Roman", Times, serif;
+$text-font: "Open Sans", "Noto Serif", Georgia, Cambria, "Times New Roman", Times, serif;
