--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ permalink: /articles/:title
     <div class="title"><h1>{{ page.title }}</h1></div>
     <div class="date"><p>{{ page.date | date: "%B %-d, %Y" }}</p></div>
     {% if page.cover %}
-		<div class="cover" style="background-image: url({{ page.cover }});"></div>
+		<div class="cover" style="background-image: url('../{{ page.cover }}');"></div>
 		{% if page.caption %}
 			<p style="text-align: center; margin-bottom: 60px;"><i>{{ page.caption }}</i></p>
 		{% endif %}
