--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,9 +1,9 @@
 body {
   margin: 0 auto;
   padding-bottom: 1em;
-  font-size: 1.25em;
+  font-size: 1.25rem;
   color: #2f2f2f;
-  line-height: 1.5em;
+  line-height: 1.7em;
   font-family: $text-font;
 }
 
@@ -69,7 +69,7 @@ table {
   height: 500px;
   width: 100%; 
   padding: 0 50rem; 
-  margin: 50px -50rem 0 -50rem;
+  margin: 50px -50rem;
 }
 
 .title {
