--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,8 @@
 
 $text-color: #444444;
 $link-color: grey;
-$page-width: 47em;
+$page-width: 80%;
+$max-page-width: 780px;
 $hover-bg: #3A3A3A;
 $bg-color: white;
 $date-color: #8b8b8b;
