--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 @import "variables";
 @import "core";
 @import "navbar";
+@import "homepage-header";
 @import "blog";
 @import "paginator";
 @import "footer";
