--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -10,6 +10,7 @@
 
 <body>
     {% include navbar.html %}
+    {% include homepage-header.html %}
     {{content}}
     <!-- {% include footer.html %} -->
 </body>
