--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,9 +1,7 @@
 body {
   margin: 0 auto;
   padding-bottom: 1em;
-  font-size: 1.25rem;
   color: #2f2f2f;
-  line-height: 1.7em;
   font-family: $text-font;
 }
 
@@ -27,8 +25,8 @@ p {
   text-align: justify;
   text-justify: inter-word;
   &:has(> img) {
-    margin: 0 auto !important;
-    font-style: italic !important;
+    margin: 0 auto;
+    font-style: italic;
   }
 }
 
@@ -58,7 +56,7 @@ table {
   margin-left: -50vw;
   margin-right: -50vw;
   margin-bottom: 20px;
-  overflow-x: scroll !important;
+  overflow-x: scroll;
 }
 
 .cover {
@@ -129,7 +127,7 @@ table {
   }
 
   img {
-    border-radius: 3px !important;
+    border-radius: 3px;
     vertical-align: middle;
     margin-right: 50px;
   }
