--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,11 +1,17 @@
 nav {
-  margin: 2em auto 6em auto;
-  text-align: right;
+  margin-left: 1em;
+  margin-right: 1em;
+  grid-column: 1 / 1;
+  grid-row: 1 / span 2;
 
   li {
-    display: inline;
+    display: block;
     list-style: none;
-    margin-left: 10px;
+  }
+
+  .nav-links {
+    padding-left: 0;
+    line-height: 1.9em;
   }
 
   a {
@@ -25,7 +31,8 @@ nav {
   }
 
   .logo {
+    margin-top: 1rem;
     font-size: 30px;
-    float: left;
+    display: inline-block;
   }
 }
