--- a/_sass/_paginator.scss
+++ b/_sass/_paginator.scss
@@ -14,6 +14,23 @@
   font: $text-font;
 }
 
+.category-header {
+  display: block;
+  border-bottom: 1px dotted black;
+  width: 100%;
+  text-align: right;
+}
+
+.category {
+  display: flex;
+  flex-wrap: wrap;
+
+  section {
+    margin-right: 10px;
+  }
+
+}
+
 .more {
   font-size: 20px;
   display: block;
