Apply section styling. Fix font and color issues.

--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -30,7 +30,7 @@ body {
   a {
     display: inline;
     font-size: 16px;
-    color: #0074D9;
+    color: $link-color;
     text-decoration: none;
   }
 }
