--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif|Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@500&display=swap');
 
-$text-color: #444444;
 $link-color: grey;
+$text-color: #4d4d4d;
 $max-page-width: 780px;
 $hover-bg: #3A3A3A;
 $bg-color: white;
 $date-color: #8b8b8b;
-$text-font: "Open Sans", "Noto Serif", Georgia, Cambria, "Times New Roman", Times, serif;
+$text-font: "Open Sans", "Noto Sans JP", "Open Sans", Georgia, Cambria, "Times New Roman", serif;
