--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,6 +1,6 @@
 nav {
   margin-left: 1em;
-  margin-right: 1em;
+  margin-right: 2em;
   grid-column: 1 / 1;
   grid-row: 1 / span 2;
 
@@ -21,18 +21,18 @@ nav {
     text-decoration: none;
 
     &:hover {
-      color: darken($link-color, 40%);
+      color: $text-color;
     }
   }
 
   .active {
-    color: darken($link-color, 40%);
-    font-size: 16px;
+    color: $text-color;
   }
 
   .logo {
     margin-top: 1rem;
     font-size: 30px;
     display: inline-block;
+    color: $text-color;
   }
 }
