Change pagination to sort by category & tag.

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -6,13 +6,13 @@
     <title>{% if page.title%}{{ page.title }} &mdash; {% endif %}Nishnha</title>
     <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
     <link rel="shortcut icon" href="favicon.ico">
+    <script src="popup.js"></script>
 </head>
 
 <body>
     {% include navbar.html %}
     {% include homepage-header.html %}
     {{content}}
-    <!-- {% include footer.html %} -->
 </body>
 
 </html>
