--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@500&display=swap');
 
-$link-color: grey;
-$text-color: #4d4d4d;
+$link-color: #4d4d4d;
+$link-color-highlight: grey;
+$text-color: #333333;
 $max-page-width: 780px;
 $hover-bg: #3A3A3A;
 $bg-color: white;
