--- a/_includes/homepage-pagination.html
+++ b/_includes/homepage-pagination.html
@@ -6,13 +6,12 @@
         
         {% assign tags_by_category = category.items | group_by: "tags"  %}
         {% for tag in tags_by_category %}
-            {% assign t = tag | where: "items.category", category_name %}
             <section>
                 {% assign tag_name = tag.name | remove: '["' | remove: '"]' | split: " " %}
                 <h2>{{ tag_name[0] | replace:"-"," " | capitalize }}</h2>
                 
                 <ul>
-                {% for item in t.items %}
+                {% for item in tag.items %}
                     {% if item.collection == "homepage_links" %}
                         {{ item.content }}
                     {% else %}
