--- a/_includes/homepage-pagination.html
+++ b/_includes/homepage-pagination.html
@@ -8,7 +8,7 @@
         {% for tag in tags_by_category %}
             <section>
                 {% assign tag_name = tag.name | remove: '["' | remove: '"]' | split: " " %}
-                <h2>{{ tag_name[0] | replace:"-"," " | capitalize }}</h2>
+                <h2>{{ tag_name[0] | replace:"-"," " | capitalize_all }}</h2>
                 
                 <ul>
                 {% for item in tag.items %}
