Update blog and navbar CSS.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,4 +7,4 @@ $max-page-width: 780px;
 $hover-bg: #3A3A3A;
 $bg-color: white;
 $date-color: #8b8b8b;
-$text-font: "Open Sans", "Noto Sans JP", "Open Sans", Georgia, Cambria, "Times New Roman", serif;
+$text-font: "Helvetica Neue Light", Georgia, Cambria, "Times New Roman", serif;
