--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,140 +1,149 @@
-body {
+article {
   margin: 0 auto;
   padding-bottom: 1em;
   color: $text-color;
   font-family: $text-font;
-}
 
-img {
-  width: auto;
-  margin: 0 auto;
-  display: block;
-}
-
-.caption {
-  text-align: center; 
-  font-style: italic; 
-  margin-top: -1rem;
-}
-
-a {
-  text-decoration: none;
-}
-
-p {
-  text-align: justify;
-  text-justify: inter-word;
-  &:has(> img) {
+  img {
+    width: auto;
     margin: 0 auto;
-    font-style: italic;
-  }
-}
-
-pre {
-  margin: 0 -1em;
-  padding: 1em;
-  background-color: #eee;
-  border-left: none;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  font-size: 14px;
-}
-
-blockquote {
-  border-left: 2px solid black;
-  margin: 0 0 0 -15px;
-  margin-left: -1em;
-  padding: 0 0 0 20px;
-  font-style: italic;
-}
-
-table {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  margin-bottom: 20px;
-  overflow-x: scroll;
-}
-
-.cover {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 500px;
-  width: 100%; 
-  padding: 0 50rem; 
-  margin: 50px -50rem;
-}
-
-.title {
-  text-align: center;
-  font-family: "Noto Sans";
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.date {
-  color: $date-color;
-  font-size: 22px;
-  border-bottom: 1px solid $date-color;
-  margin-bottom: 6em;
-
-  P {
-      text-align: center;
+    display: block;
   }
 
-}
-
-.top {
-  display: block;
-  text-align: center;
-  margin: 2em;
-  color: #4e4e4e;
-}
-
-.comment {
-  font-size: 22px;
-  line-height: 36px;
-  background-image: url(/img/comment-header.svg);
-  background-repeat: no-repeat;
-  background-position: 60px 10px;
-  margin-bottom: 20px;
-
-  .comment-header {
-    color: #999;
+  .caption {
+    text-align: center; 
+    font-style: italic; 
+    margin-top: -1rem;
   }
 
-  .comment-username {
-    font-weight: bold;
-    color: black;
-  }
-
-  a.comment-date {
-    color: #999;
+  a {
+    font-family: "Helvetica Neue Light";
+    font-size: 17px;
+    line-height: 1.5rem;
+    color: $link-color;
+    text-decoration: underline;
 
     &:hover {
-      color: #444;
+      color: $link-color-highlight;
     }
   }
 
-  .comment-body {
-    padding-left: 90px;
-    padding-top: 10px;
-  }
-
-  img {
-    border-radius: 3px;
-    vertical-align: middle;
-    margin-right: 50px;
-  }
-
   p {
-    padding-bottom: 0.75em;
-    margin: 0;
-    text-align: justified;
+    text-align: justify;
+    text-justify: inter-word;
+    font-size: 16px;
+    line-height: 1.5rem;
+    color: $text-color;
+    &:has(> img) {
+      margin: 0 auto;
+      font-style: italic;
+    }
+  }
+
+  pre {
+    margin: 0 -1em;
+    padding: 1em;
+    background-color: #eee;
+    border-left: none;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    font-size: 14px;
+  }
+
+  blockquote {
+    border-left: 2px solid black;
+    margin: 0 0 0 -15px;
+    margin-left: -1em;
+    padding: 0 0 0 20px;
+    font-style: italic;
+  }
+
+  table {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    margin-bottom: 20px;
+    overflow-x: scroll;
+  }
+
+  .cover {
+    display: block;
+    height: 300px;
+    width: 100%; 
+    background-size: cover;
+    background-position: center center;
+    will-change: transform;
+  }
+
+  h1 {
+    margin-top: 1rem;
+    margin-bottom: 0;
+    font-family: "Noto Sans";
+    font-weight: 400;
+    font-size: 2rem;
+  }
+
+  p + p {
+    text-indent: 2.5em;
+  }
+
+  .date {
+    color: $date-color;
+    font-size: 18px;
+    border-bottom: 1px solid $date-color;
+    margin-top: 0.5rem;
+    margin-bottom: 6em;
+  }
+
+  .top {
+    display: block;
+    text-align: center;
+    color: #4e4e4e;
+  }
+
+  .comment {
+    font-size: 22px;
+    line-height: 36px;
+    background-image: url(/img/comment-header.svg);
+    background-repeat: no-repeat;
+    background-position: 60px 10px;
+    margin-bottom: 20px;
+
+    .comment-header {
+      color: #999;
+    }
+
+    .comment-username {
+      font-weight: bold;
+      color: black;
+    }
+
+    a.comment-date {
+      color: #999;
+
+      &:hover {
+        color: #444;
+      }
+    }
+
+    .comment-body {
+      padding-left: 90px;
+      padding-top: 10px;
+    }
+
+    img {
+      border-radius: 3px;
+      vertical-align: middle;
+      margin-right: 50px;
+    }
+
+    p {
+      padding-bottom: 0.75em;
+      margin: 0;
+      text-align: justified;
+    }
   }
 }
