--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -13,7 +13,11 @@ article {
   .caption {
     text-align: center; 
     font-style: italic; 
-    margin-top: -1rem;
+    margin-top: -0.5rem;
+  }
+
+  hr {
+    color: #ddd;
   }
 
   a {
@@ -94,8 +98,10 @@ article {
     color: $date-color;
     font-size: 18px;
     border-bottom: 1px solid $date-color;
-    margin-top: 0.5rem;
-    margin-bottom: 6em;
+    p {
+      margin-top: 0.3rem;
+      margin-bottom: 1rem;
+    }
   }
 
   .top {
