--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -10,8 +10,8 @@ nav {
   }
 
   a {
-    font: 18px "Helvetica Neue Light";
-    font-weight: 300;
+    font-size: 20px;
+    font-family: "Helvetica Neue Light";
     color: $link-color;
     text-decoration: none;
 
