--- a/css/main.scss
+++ b/css/main.scss
@@ -5,10 +5,7 @@
 @import "variables";
 @import "core";
 @import "navbar";
-@import "homepage-header";
-@import "blog";
-@import "paginator";
-@import "footer";
+@import "post";
+@import "homepage";
 // @import "mobile";
-@import "resume";
 @import "monokai";
