--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -66,71 +66,12 @@ nav {
 .logo {
   padding: 0;
   font-size: 18px;
-  float: left;
-  display: inline-block;
 }
 
 .page {
   width: 98%;
   background-color: white;
   margin: 0 auto;
-}
-
-.home-paginate a {
-  text-decoration: none;
-}
-
-.paginator-post {
-  display: inline-block;
-  color: black;
-  background: white;
-  padding: 5% 5%;
-  width: 90%;
-
-  .title {
-    display: block;
-    font: bold 18px "Poly";
-    text-decoration: none;
-  }
-
-  .date {
-    color: #8b8b8b;
-    display: inline;
-  }
-
-  .description {
-    display: inline;
-    font: 200 17px "Poly";
-  }
-
-  &:hover {
-    background: #3A3A3A;
-    color: white;
-  }
-}
-
-.paginator-image {
-  position: relative;
-  display: block;
-  color: white;
-  background: #3A3A3A;
-
-  .image {
-    vertical-align: top;
-  }
-
-  .title {
-    margin: 0;
-    display: inline;
-    position: absolute;
-    top: 85%;
-    left: 15%;
-    font: bold 32px "Poly";
-  }
-
-  &:hover .image {
-    opacity: 0.7;
-  }
 }
 
 .page .more {
@@ -168,13 +109,6 @@ nav {
     text-decoration: none;
     color: #0074D9;
   }
-
-  .top {
-    display: block;
-    text-align: center;
-    font-size: 18px;
-    color: #4e4e4e;
-  }
 }
 
 img {
@@ -199,9 +133,8 @@ img {
 }
 
 .archive {
-  padding: 6% 8%;
+  padding: 3em 4em;
   list-style-position: inside;
-  background: white;
 
   li {
     list-style: none;
@@ -210,12 +143,9 @@ img {
 
   a {
     display: inline;
-    font-size: 16px;
-    color: #0074D9;
+    font-size: 18px;
+    line-height: 1.65em;
+    color: $link-color;
     text-decoration: none;
   }
-}
-
-#disqus_thread {
-  padding: 0 2%;
 }
