--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -11,10 +11,9 @@ nav {
 
   a {
     font-size: 20px;
-    font-family: "Helvetica Neue Light";
+    font-family: $link-font;
     color: $link-color;
     text-decoration: none;
-
     &:hover {
       color: $link-color-highlight;
     }
@@ -35,7 +34,6 @@ nav {
   }
 
   .logo {
-    margin-top: 1rem;
     font-size: 30px;
     display: inline-block;
     color: $text-color;
