--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@500&display=swap');
 
+$max-page-width: 780px;
+$navbar-width: 134px;
+$text-color: #333333;
+$date-color: #8b8b8b;
 $link-color: #4d4d4d;
 $link-color-highlight: grey;
-$text-color: #333333;
-$max-page-width: 780px;
 $hover-bg: #3A3A3A;
-$bg-color: white;
-$date-color: #8b8b8b;
-$text-font: "Source Sans Pro", "Helvetica Neue Light", Georgia, Cambria, "Times New Roman", serif;
+$text-font: "Source Sans Pro", Georgia, Cambria, "Times New Roman", serif;
+$link-font: "Helvetica Neue Light", "Times New Roman", Georgia, Cambria, serif;
+$header-font: "Roboto", "Times New Roman", Cambria, serif;
