Refactor HTML templates.

--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -1,15 +1,16 @@
-<div class="category">
-    {% assign docs_by_category = site.documents | group_by: "category" %}
-    {% for category in docs_by_category %}
-        {% assign category_name = category.name | remove: '["' | remove: '"]' | split: " " %}
+<p class="homepage-header">This is the website of <strong>Nishant Sinha</strong>, denizen of the internet. Here I share my original writing, recommendations from the internet, books, travel and stories, and other quips.</p>
+
+{% assign docs_by_category = site.documents | group_by: "category" %}
+{% for category in docs_by_category %}
+    <div class="category">
+    {% assign category_name = category.name | remove: '["' | remove: '"]' | split: " " %}
         <h1 class="category-header" id="{{ category_name }}">{{ category_name }}</h1>
-        
         {% assign tags_by_category = category.items | group_by: "tags"  %}
         {% for tag in tags_by_category %}
             <section>
                 {% assign tag_name = tag.name | remove: '["' | remove: '"]' | split: " " %}
                 <h2>{{ tag_name[0] | replace:"-"," " | capitalize_all }}</h2>
-                
+                    
                 <ul>
                 {% for item in tag.items %}
                     {% if item.collection == "homepage_links" %}
@@ -21,5 +22,5 @@
                 </ul>
             </section>
         {% endfor %}
-    {% endfor %}
-</div>
+    </div>
+{% endfor %}
