--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    {% include navbar.html %}
-    {{content}}
-    <!-- {% include footer.html %} -->
+    <nav>
+        {% include navbar.html %}
+    </nav>
+    <main>
+        {{content}}
+    </main>
 </body>
 
 </html>
