Add JS for popups, sidenotes, footnotes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
     <title>{% if page.title%}{{ page.title }} &mdash; {% endif %}Nishnha</title>
     <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
     <link rel="shortcut icon" href="favicon.ico">
+    <script src="/res/js/popup.js"></script>
+    <script src="/res/js/sidenote.js"></script>
+    <script src="/res/js/footnote.js"></script>
 </head>
 
 <body>
