Make CSS responsive. Remove mobile CSS bloat.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="Nishnha" />
     {% if page.cover %} <meta property="og:image" content={{ page.cover }} /> {% endif %}
-    <link href="/css/main.css" rel="stylesheet" media="(min-width: 769px)">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/main.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="/res/js/popup.js"></script>
     <script src="/res/js/sidenote.js"></script>
