--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@500&display=swap');
 
-$max-page-width: 780px;
-$navbar-width: 134px;
+$max-page-width: 48em;
+$navbar-width: 8.5em;
 $text-color: #333333;
 $date-color: #8b8b8b;
 $link-color: #4d4d4d;
