--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -1,11 +1,11 @@
 body {
   display: grid;
-  grid-template-columns: auto $max-page-width;
-  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 8fr;
   top: 1rem;
 }
 
 body {
+  overflow: auto;
   font-family: $text-font;
   max-width: $max-page-width + $navbar-width;
   margin: 0 auto;
@@ -17,7 +17,29 @@ body {
   color: $text-color;
 }
 
-// For mobile
-#toggle, .fa-bars {
-  display: none;
+main {
+  grid-column: 2 / 2;
+  margin-right: 1em;
+}
+
+@media only screen and (max-width: $max-page-width + $navbar-width * 2) {
+  body {
+    left: 0;
+    padding-left: 0;
+  }
+}
+
+@media only screen and (max-width: $max-page-width + $navbar-width) {
+  body {
+    display: block;
+    top: 0;
+    margin: 1em;
+    left: 0;
+    padding-left: 0;
+    font-size: 18px;
+  }
+
+  main {
+    margin-right: 0;
+  }
 }
