--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -1,12 +1,6 @@
 .homepage-header {
-  grid-column: 2 / 2;
-  grid-row: 1 / 1;
   text-align: justify;
   margin-top: 0;
-}
-
-.page {
-  grid-column: 2 / 2;
 }
 
 .category-header {
@@ -24,11 +18,11 @@
 .category {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
 }
 
 section {
   margin-right: 3rem;
-  max-width: 50%;
   word-wrap: break-word;
   
   h2 {
