--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto');
+@font-face {
+	font-family: 'Source Serif Pro';
+	src: url('/res/SourceSerifPro-Regular.ttf') format('truetype');
+}
 
 $max-page-width: 48em;
 $navbar-width: 8.5em;
@@ -7,6 +11,6 @@ $date-color: #8b8b8b;
 $link-color: #4d4d4d;
 $link-color-highlight: grey;
 $hover-bg: #3A3A3A;
-$text-font: "Source Sans Pro", Georgia, Cambria, "Times New Roman", serif;
-$link-font: "Helvetica Neue Light", "Times New Roman", Georgia, Cambria, serif;
+$text-font: "Source Serif Pro", Georgia, Cambria, "Times New Roman", serif;
+$link-font: "Times New Roman", Georgia, Cambria, serif;
 $header-font: "Roboto", "Times New Roman", Cambria, serif;
