--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,5 +1,11 @@
-article {
-  word-break: break-word;
+main {
+  article {
+    line-height: 1.65em;
+    margin: 0 auto;
+    padding-bottom: 1em;
+    word-break: break-word;
+  }
+
   h1 {
     font-family: $header-font;
     margin: 0;
@@ -31,7 +37,7 @@ article {
   h2 {
     font-family: $header-font;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 
   hr {
