Create external links section in navbar.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,13 @@
 <a class="logo" href="/">nishnha</a>
 <ul class="nav-links">
 	<li><a href="/archive" {% if page.url contains "archive" %} class="active" {% endif %} title="A list of all my posts">Archive</a></li>
-	<li><a href="http://github.com/Nishnha" target="_blank">GitHub</a></li>
-	<li><a href="https://www.instagram.com/nishnha/" target="_blank">Photography</a></li>
-	<li><a href="https://www.twitter.com/nishnha/" target="_blank">Twitter</a></li>
-	<li><a href="/about" {% if page.url contains "about" %} class="active" {% endif %} title="About me">Me</a></li>
+	<li><a href="/about" {% if page.url contains "about" %} class="active" {% endif %} title="About me and this website">About</a></li>
+	<li>
+		<p class="external-links-header">Links:</p>
+		<ul class="external-links">
+			<li><a href="http://github.com/Nishnha" target="_blank">GitHub</a></li>
+			<li><a href="https://www.instagram.com/nishnha/" target="_blank">Instagram</a></li>
+			<li><a href="https://www.twitter.com/nishnha/" target="_blank">Twitter</a></li>
+		</ul>
+	</li>
 </ul>
