--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {% if page.cover %} <meta property="og:image" content={{ page.cover }} /> {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/main.css" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
     <script src="/res/js/popup.js"></script>
     <script src="/res/js/sidenote.js"></script>
     <script src="/res/js/footnote.js"></script>
