--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,6 +9,9 @@ $navbar-width: 8.5em;
 $text-color: #333333;
 $date-color: #8b8b8b;
 $link-color: #4d4d4d;
+$header-color: #7646CA;
+$logo-color: #4E01D4;
+$category-color: #210C45;
 $link-color-highlight: grey;
 $hover-bg: #3A3A3A;
 $text-font: "Source Serif Pro", Georgia, Cambria, "Times New Roman", serif;
