Update to use Google Fonts.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto');
-@font-face {
-	font-family: 'Source Serif Pro';
-	src: url('/res/SourceSerifPro-Regular.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&family=Roboto&family=Ubuntu+Mono&display=swap');
 
 $max-page-width: 48em;
 $navbar-width: 8.5em;
