--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -18,6 +18,15 @@
     }
 }
 
+code {
+    font-family: 'Ubuntu Mono', monospace;
+    padding: .15em .5em;
+    border-radius: 2px;
+    font-size: 0.98rem;
+    background-color: #f7f7f7;
+    color: $header-color;
+}
+
 @media only screen and (max-width: $max-page-width + $navbar-width) {
     .core-values {
         width: 100%;
