--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -11,7 +11,10 @@
                 {% assign tag_name = tag.name | remove: '["' | remove: '"]' | split: " " %}
                 <a href="#{{ tag_name }}">
                     <h2 id="{{ tag_name }}">
-                        <object type="image/svg+xml" data="/res/link.svg" class="link"></object>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="link" fill="none" style="display:inline-block;vertical-align:middle" height="16" width="16" viewBox="0 0 24 24" stroke="#7646CA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
+                            <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
+                        </svg>
                         {{ tag_name[0] | replace:"-"," " | capitalize_all }}
                     </h2>
                 </a> 
