Use CSS instead of Liquid for homepage capitalization.

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -33,6 +33,7 @@ section {
   
   h2 {
     margin-bottom: 0;
+    text-transform: capitalize;
     font-family: $header-font;
     color: $header-color;
     font-size: 22px;
