--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -15,7 +15,7 @@
                             <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
                             <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
                         </svg>
-                        {{ tag_name[0] | replace:"-"," " | capitalize_all }}
+                        {{ tag_name[0] | replace:"-"," " }}
                     </h2>
                 </a> 
                 <ul>
