--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -69,3 +69,9 @@ section {
     }
   } 
 }
+
+@media only screen and (max-width: $max-page-width + $navbar-width) {
+  .link {
+    display: none;
+  }
+}
