Add smol tree to navbar.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,10 @@
 <a class="logo" href="/">nishnha</a>
+<img src="/res/tree-logo.png" class="mobile-img" />
 <ul class="nav-links">
 	<li><a href="/archive" {% if page.url contains "archive" %} class="active" {% endif %} title="A list of all my posts">Archive</a></li>
 	<li><a href="/about" {% if page.url contains "about" %} class="active" {% endif %} title="About me and this website">About</a></li>
+        </br>
+        <img src="/res/tree-logo.png" class="full-img" />
 	<li>
 		<p class="external-links-header">Links:</p>
 		<ul class="external-links">
